# JI-HTTPS-Server

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
datagen/: CMakeLists.txt
datagen/faker/: CMakeLists.txt  FakerConfigVersion.cmake
datagen/faker/CMake/: FakerConfig.cmake.in
datagen/faker/include/: company.hpp  credit_card.hpp  faker.hpp  helpers.hpp  locales.hpp  name.hpp
datagen/src/: buffer.hpp  datagen.cpp  datagen.hpp  faker.cpp  faker.hpp  generation.cpp  generation.hpp  main.cpp  model.hpp
datagen/tests/: CMakeLists.txt
datagen/tests/src/: main.cpp
log_generator/: CMakeLists.txt
log_generator/src/: main.cpp
scripts/: generate_ca.sh  generate_document.sh  generate_root.sh  generate_server.sh  hammer_server.py  monitor_io.sh  profile.sh  request_throughput.sh  split_csv.sh
scripts/config/: document.cfg  root.cfg  server.cfg
scripts/utils/: colors.sh  parallel_counter.pl
src/: env.cpp  env.hpp  main.cpp  models.cpp  models.hpp  perf_monitor.cpp  perf_monitor.hpp  resources.cpp  resources.hpp  server_opts.cpp  server_opts.hpp  utilities.cpp  utilities.hpp  utopia.cpp  utopia.hpp
src/helpers/: env.cpp  env.hpp  thread_safe_queue.hpp  utilities.cpp  utilities.hpp  xml_builder.cpp  xml_builder.hpp
src/monitors/: perf_monitor.hpp  stat_monitor.cpp  stat_monitor.hpp
src/resources/: analytics.cpp  model.cpp  resources.cpp
